2003-05-02  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* configure.ac: 0.3a test release.

	* dccserver.c: warn if neither poll.h nor sys/poll.h are found.

	* configure.ac: one of poll.h and sys/poll.h is enough; break if
	poll.h is found.

	* Makefile.am (EXTRA_DIST): distribute README.Darwin.

	* README.Darwin: add instructions for Darwin.

	* configure.ac: check for poll.h and sys/poll.h.
	(USE_LIBPOLL): detect poll library (if any), and point to poll
	emulation lib if no poll() is found.

	* dccserver.c: conditionally include poll.h or sys/poll.h.

	* dccsend.c: include <sys/types.h>; noted missing by Jeremy Gore.

2003-04-15  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* strlcpy.c: sync license with original (less strict).
	* COPYING: sync license with strlcpy.c.

	* dccserver.c (get_file): add warning in an error case.

2003-04-12  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccsend.c (send_file): remove two unused variables.
	(parse_send_line): remove unused variable.
	(main): remove three unused variables.
	(global): remove unused variable.

	* dccserver.c (get_file): show time taken by transfer and transfer
	rate.
	(converse_with_client): remove unused variable.
	(handle_input): remove unused variable.
	(create_and_bind_socket): fix format string.

2003-04-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c: allow listening on multiple ports.
	(main): fix -v error message.

	* dccserver.mdoc: document that listening on multiple ports works
	now.
	* dccserver.man: regen.

	* dccserver.c (main): do chroot after option parsing, should be
	early enough and avoid an error message in case of -h or -v.

2003-04-07  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.mdoc: document "quit".
	* dccserver.man: regen.

	* NEWS:	0.3 RELEASED

	* configure.ac: Bump to 0.3.

	* Makefile.am, configure.ac: add and install dccsend man pages.

	* dccsend.mdoc: add man page for dccsend.
	* dccsend.man: generate.

	* dccsend.c (main): fix -v output.